<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>path_searching</name>
  <version>0.0.0</version>
  <description>The path_searching package</description>

  <maintainer email="zagerzhang@todo.todo">zagerzhang</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>plan_env</depend>
  <depend>cv_bridge</depend>

  <build_depend>eigen</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>ompl</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
